# aoc-2020

./: .gitignore  README.md
clojure/: project.clj
clojure/src/advent_of_code/: d01.clj  util.clj
data/: d01-part2-drowsy.txt  d10-part2-drowsy.txt  d10-part2-sample.txt  d13-part2-drowsy.txt  d13-part2-philip.txt  d18-part1-philip.txt  d18-part2-philip.txt  d20-part1-drowsy.txt  d20-part1-philip.txt
rust/: Cargo.toml  Readme.md
rust/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d20.rs  main.rs  utils.rs
