[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Albrecht Schmidt <mail@albrechtschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming-stats = "0.2.3"
regex = "1.4.2"
lazy_static = "1.4.0"
itertools = "0.9.0"
num = "0.3.1"